[fix]delete-image icon z-index fix

--- a/app/assets/stylesheets/modules/customize.sass
+++ b/app/assets/stylesheets/modules/customize.sass
@@ -947,7 +947,7 @@ body.paper
     background-color: rgba(0, 0, 0, 0.5)
     border: 1px solid rgba(255, 255, 255, .5)
     border-radius: 6px
-    z-index: 9999
+    z-index: 5
 
 /* calendar (listings/calendar)
   ================================================================================ */
